# genzis-test-task

./: .gitignore  README.md  config.py  data-dev.sqlite  pyproject.toml  requirements.txt  run.sh  uwsgi.ini
backend/: __init__.py
backend/forms/: forms.py
backend/models/: marshmallow_models.py  models.py
backend/src/tools/: parser.py
migrations/versions/: f3fb4b1bfdb9_.py
templates/: index.html
