[tool.poetry]
name = "genzis-test-task"
version = "0.1.0"
description = ""
authors = ["Spartan327 <vbutovchenko@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^1.0.0"
psycopg2-binary = "^2.9.3"
Flask-Migrate = "^3.1.0"
marshmallow = "^3.14.1"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.27.0"
Flask-RESTful = "^0.3.9"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
